Bouwen html/css workinprogressss

--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
             <section class="carousel-tips-buurtbewoners">
                 <div class="slides">
                     <div class="slides-item slide-1" id="slide-1">
-                        <img alt="" src="">
-                        <p>“In de winter sproei ik mijn bananenplant 1x per week” - Anne, 65</p>
+                        <img id="buurtbewoner-foto-1" alt="buurtbewoner Riet geeft plant water" src="./assets/afbeeldingen-rechtenvrij/buurtbewoner-riet-plant-water.jpeg">
+                        <p>“In de winter sproei ik mijn bananenplant 2x per week” - Riet, 65</p>
                     </div>
                     <div class="slides-item slide-2" id="slide-2">
-                        <img alt="" src="">
-                        <p>“mijn cactus wil graag veel zonlicht maar weinig water” - Bert, 22</p>
+                        <img alt="buurtbewoner Leyla mat haar plant in handen" src="./assets/afbeeldingen-rechtenvrij/buurtbewoner-leyla-plant.webp">
+                        <p>“Mijn cactus wil graag veel zonlicht maar weinig water” - Leyla, 22</p>
                     </div>
                     <div class="slides-item slide-3" id="slide-3">
-                        <img alt="" src="">
-                        <p>“Mijn Aloë Vera houd niet een laag water onder in de pot” - Samir, 65</p>
+                        <img alt="" src="./assets/afbeeldingen-rechtenvrij/buurtbewoner-rafi-plant-verzorging.webp">
+                        <p>“Mijn Aloë Vera houd niet een laag water onder in de pot” - Rafi, 24</p>
                     </div>
                     <div class="slides-item slide-4" id="slide-4">
-                        <img alt="" src="">
-                        <p>“Een raam op het noorden wordt mijn monstera super blij van” - Barry, 80</p>
+                        <img alt="" src="./assets/afbeeldingen-rechtenvrij/buurtbewoner-johan-plant-verpotten.jpeg">
+                        <p>“Een raam op het noorden wordt mijn monstera super blij van” - Johan, 31</p>
                     </div>
                 </div>
-
+<!-- later iets mee doen?
                 <div class="carousel__nav">
                     <a class="slider-nav" href="#slide-1">1</a>
                     <a class="slider-nav" href="#slide-2">2</a>
                     <a class="slider-nav" href="#slide-3">3</a>
                     <a class="slider-nav" href="#slide-4">4</a>
-                </div>
+                </div>-->
             </section>
         </div>
 
@@ -73,7 +73,6 @@
 
 
         <!-- box: kom langs bij ObA-->
-
         <div class="box-kom-langs-bij-oba">
             <div>
                 <h2>Kom langs bij de ObA!</h2>
@@ -82,6 +81,8 @@
             </div>
         </div>  
          
+
+        <!-- box: vind jouw plant -->
         <div class="box-vind-jouw-plant">
             <div>
                 <h2>Vind jouw plant</h2>
