issue fixen: % in img naam

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <body>
     <header>  
         <div id="buurtcampus-logo">
-            <img src="./assets/Buurtcampus Oost-logo.svg" alt="buurtcampus logo">
+            <img src="./assets/Buurtcampus-oost-logo.svg" alt="buurtcampus logo">
         </div>
         <div id="stekjesbieb-logo">
             <img src="./assets/stekjesbieb-logo.svg" alt="stekjesbieb logo">
         </div>
-
         <div id="buurtcampus-footer">
             <img src="./assets/BuurtcampusFooter.svg" alt="buurtcampus footer">
         </div>
@@ -30,7 +29,7 @@
     </header>
 
     <main>
-        
+
         <div id="h1-styling">
             <h1>Informatie plantenverzorging</h1>
         </div>
@@ -51,7 +50,7 @@
                     </div>
                     <div class="slides-item slide-3" id="slide-3">
                         <img alt="" src="./assets/afbeeldingen-rechtenvrij/buurtbewoner-rafi-plant-verzorging.webp">
-                        <p>“Mijn Aloë Vera houd niet een laag water onder in de pot” - Rafi, 24</p>
+                        <p>“Mijn Aloë Vera houd niet van een laag water onder in de pot” - Rafi, 24</p>
                     </div>
                     <div class="slides-item slide-4" id="slide-4">
                         <img alt="" src="./assets/afbeeldingen-rechtenvrij/buurtbewoner-johan-plant-verpotten.jpeg">
