--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
         
     <main>
-        <div>
-            <h1>Informatie plantenverzorging</h1>
+        <div class="main-header">
+            <h1>Informatie over het verzorgen van planten</h1>
+            <h2>En ze leefden nog lang en gelukkig..!🪴✨ </h2>
+            <p> Op deze pagina vind tips en informatie over hoe je jouw planten kunt verzorgen</p>
         </div>
                 
         <!-- carousel met buurtbewoner tip's -->
@@ -57,7 +59,7 @@
         <!-- box "kom langs bij ObA"-->
         <div class="box-kom-langs-bij-oba">
             <div>
-                <h2>Kom langs bij de ObA!</h2>
+                <h2> Kom langs bij ObA!</h2>
                 <p>➳ wissel planten verzorgingstips uit met buurtgenoten (di & do 12:00-14:00)</p>
                 <p>➳ volg een workshop plantenverzorging(vrijdag 18 oktober 2022 16:00-17:00)</p>
             </div>
@@ -66,24 +68,12 @@
 
         <!-- box "vind jouw plant" -->
         <div class="box-vind-jouw-plant">
-            <div>
-                <h2>Vind jouw plant</h2>
-            </div>
-            <div>
-                <p>plantenlijst A t/m Z</p>
-            </div>
-            <div>
-             <p>zoek op naam</p>
-            </div>
+            <h2>Vind jouw plant</h2>
+                <button type="button"><p>plantenlijst A t/m Z</p></button>
+                <button type="button"><p>zoek op naam 🔍</p></button>
         </div>
 
     </main>
-
-
-
-
-
-
 
     <footer>
         <div id="buurtcampus-footer">
